# ntorrent

./: CMakeLists.txt  MetainfoFile.cpp  MetainfoFile.h  README.md  bencoding.cpp  bencoding.h  main.cpp  metainfo.h  tracker_request.h  url_encoding.h
examples/: response  response-compact
examples/scrape/: ubuntu-scrape
examples/torrent/: debian-10.7.0-ppc64el-netinst.iso.torrent
src/: bencoding.h  encoding.h  metainfo.h  peer_wire_protocol_messages.h  tracker_request.h  tracker_response.h  tracker_udp.h
src/utils/: bitvector.h  encoding.h  fs.h  http_request.h  net.h  os.h  sha1.h  url_encoding.h
tests/: CMakeLists.txt  scrape_url_test.cpp
